--- a/Лабораторна #N7/sources/css/main.css
+++ b/Лабораторна #N7/sources/css/main.css
@@ -21,7 +21,7 @@ body {
 	height: 38vw;
 }
 
-.headMiddle {
+.head-middle {
 	color: rgb(255, 255, 255);
 	font-family: "Playfair Display";
 	margin-top: 12vw;
@@ -29,17 +29,17 @@ body {
 	text-align: center;
 }
 
-.headMiddle h1 {
+.head-middle h1 {
 	margin: -1vw;
 	font-size: 4vw;
 }
 
-.headMiddle h2 {
+.head-middle h2 {
 	margin: -1vw;
 	font-size: 2.75vw;
 }
 
-.headMiddle h3 {
+.head-middle h3 {
 	margin: 0;
 	font-size: 2.2vw;
 }
@@ -77,7 +77,7 @@ body {
 	transform: scale(1.1);
 }
 
-.verticalBitton1 {
+.vertical-button1 {
 	background-image: url(../resourses/header/arrow1.png);
 	background-size: 100%;
 	width: 2.7%;
@@ -87,7 +87,7 @@ body {
 	margin-top: -16.5vw;
 }
 
-.verticalBitton2 {
+.vertical-button2 {
 	background-image: url(../resourses/header/arrow2.png);
 	background-size: 100%;
 	width: 2.7%;
@@ -188,6 +188,11 @@ body {
 	margin-top: 2.5vw;
 }
 
+.food-menue-button:hover{
+	transition: all .1s ease-in-out;
+	transform: scale(1.1);
+}
+
 .card {
 	background-color: rgb(255, 255, 255);
 	float: left;
@@ -234,9 +239,9 @@ body {
 
 .form {
 	background-image: url(../resourses/form/Image\ 1970\ x\ 518.png);
-  background-size: 110vw;
-  height: 29vw;
-  background-position-x: -3.5vw;
+	background-size: 110vw;
+	height: 29vw;
+	background-position-x: -3.5vw;
 }
 
 .form-style-9 h1 {
@@ -348,66 +353,261 @@ body {
 }
 
 .form-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 34vw;
-  margin-top: 1.5vw;
-  color: #ffffff;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 34vw;
+	margin-top: 1.5vw;
+	color: #ffffff;
 }
 
-.form-bottom h3{
-  font-family: "Playfair Display";
-  font-size: 1.65vw;
-  padding-right: 1.35vw;
+.form-bottom h3 {
+	font-family: "Playfair Display";
+	font-size: 1.65vw;
+	padding-right: 1.35vw;
 }
 
-.form-bottom h4{
-  padding-left: 1vw;
-  font-family: SintonyRegular;
+.form-bottom h4 {
+	padding-left: 1vw;
+	font-family: SintonyRegular;
 	font-size: 0.8vw;
 }
 
-.form-bottom span{
-  color: #fe4c8d;
+.form-bottom span {
+	color: #fe4c8d;
 }
 
 #floating-image1 {
-  position: absolute;
-  width: 18%;
-  margin-top: -3vw;
-  margin-left: 7.3vw;
+	position: absolute;
+	width: 18%;
+	margin-top: -3vw;
+	margin-left: 7.3vw;
 }
 
 #floating-image2 {
-  position: absolute;
-  width: 14vw;
-  height: 13vw;
-  margin-top: -6.5vw;
-  margin-left: 74.3vw;
+	position: absolute;
+	width: 14vw;
+	height: 13vw;
+	margin-top: -6.5vw;
+	margin-left: 74.3vw;
 }
 
-.happy-clients h1{
-  margin-top: 6vw;
-  text-align: center;
-  font-size: 2.7vw;
+.happy-clients h1 {
+	margin-top: 6vw;
+	text-align: center;
+	font-size: 2.7vw;
 }
 
-.happy-clients h2{
-  margin: 0;
-  margin-left: 2vw;
-  text-align: center;
-  font-size: 2.7vw;
+.happy-clients h2 {
+	margin: 0;
+	margin-left: 2vw;
+	text-align: center;
+	font-size: 2.7vw;
 }
 
 .gallery {
-  background-color: #edf1f3;
+	background-color: #edf1f3;
+	padding-bottom: 4.4vw;
 }
 
 .gallery h1 {
-  margin-top: 4vw;
-  margin-bottom: 1vw;
-  padding-top: 5vw;
-  text-align: center;
-  font-size: 2.7vw;
+	margin-top: 4vw;
+	margin-bottom: 1vw;
+	padding-top: 5vw;
+	text-align: center;
+	font-size: 2.5vw;
+}
+
+.upper-footer h1 {
+	display: inline-block;
+	margin-top: 5vw;
+	margin-bottom: 5vw;
+	margin-right: 5vw;
+	font-size: 2.5vw;
+}
+
+.time {
+	margin-left: 2.5vw;
+	display: inline-block;
+}
+
+.time h2 {
+	display: inline;
+	font-size: 2vw;
+}
+
+.time p {
+	display: block;
+	font-size: 1.2vw;
+	margin: 0;
+}
+
+.time span {
+	display: block;
+	font-size: 1.5vw;
+	color: #fea100;
+}
+
+.upper-footer-wrapper {
+	display: flex;
+	align-items: center;
+}
+
+#floating-image3 {
+	margin-top: -9.5vw;
+	margin-left: 69vw;
+	width: 12vw;
+	position: absolute;
+}
+
+.page-footer {
+	background-color: #373844;
+}
+
+.page-footer-wrapper {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 2vw;
+}
+
+.page-footer-wrapper h3 {
+	color: white;
+	padding-top: 1vw;
+	font-size: 1.4vw;
+}
+
+.navigation {
+	width: 15%;
+	display: grid;
+}
+
+.navigation a {
+	padding-top: 0.5vw;
+	text-decoration: none;
+	color: #adb2b7;
+	font-size: 1.25vw;
+}
+
+.news-letter {
+	width: 50%;
+}
+
+.news-letter form {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.news-letter ::placeholder {
+	color: white;
+}
+
+.news-letter p {
+	padding-top: 0.5vw;
+	font-size: 1.25vw;
+	color: #adb2b7;
+}
+
+.news-letter input[type="image"] {
+	width: 50%;
+}
+
+.news-letter input[type="submit"] {
+	width: 10vw;
+	height: 3.4vw;
+	background-image: url(../resourses/footer/Subscribe.png);
+	background-size: 100%;
+	background-position: 0;
+	background-color: rgba(0, 0, 0, 0);
+	border: none;
+	cursor: pointer;
+}
+
+.news-letter input[type="submit"]:hover {
+	transition: all .1s ease-in-out;
+	transform: scale(1.05);
+}
+
+#email-form {
+	height: 3vw;
+	width: 18vw;
+	border-color: #52535e;
+	background-position: 1.1vw 1vw;
+	background-image: url(../resourses/footer/icon_email.png);
+	background-repeat: no-repeat;
+	background-size: 7%;
+	background-color: #373844;
+	border-style: solid;
+	border-radius: 4%;
+	color: rgb(255, 255, 255);
+	padding-left: 4.3vw;
+	font-size: 1vw;
+}
+
+.our-apps {
+	padding-right: 1vw;
+	width: 20%;
+}
+
+.our-apps h3 {
+	padding-bottom: 1vw;
+}
+
+.get-app-buttons {
+	width: 12vw;
+}
+
+.social-networks {
+	margin-top: 2vw;
+}
+
+.social-networks a img {
+	width: 10%;
+}
+
+.social-networks a img:hover {
+	transition: all .1s ease-in-out;
+	transform: scale(1.1);
+}
+
+.page-footer hr {
+	padding-top: 2vw;
+	padding-bottom: 2vw;
+}
+
+.hr-fotter {
+	margin-top: 3vw;
+	padding-bottom: 2.5vw;
+}
+
+.hr-fotter h4 {
+	padding: 0;
+	color: #8d9198;
+	font-size: 0.7vw;
+}
+
+.hr-fotter span {
+	padding: 0;
+	color: white;
+}
+
+.separator {
+	display: flex;
+	align-items: center;
+	text-align: center;
+}
+
+.separator::before,
+.separator::after {
+	content: '';
+	flex: 1;
+	border-bottom: 1px solid #000;
+}
+
+.separator::before {
+	margin-right: 2vw;
+}
+
+.separator::after {
+	margin-left: 2vw;
 }
